# JCode

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml
experts/: __init__.py  bugfix.md  docstring.md  fastapi.md  mysql.md  nocomment.md  typehint.md
main_code/: __init__.py  banner.py  commands.py  config.py  context.py  gate.py  generator.py  llm.py  locator.py  net_set.py  pipeline.py  tools.py  tui.py  verifier.py  version.json  version.py
tests/: test_core.py
